--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -7,8 +7,8 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: -1;
   filter: blur(2px);
+  z-index: 1;
 }
 
 .button-wrapper{
@@ -24,13 +24,13 @@
 
 .header-wrapper {
   position: relative;
-  z-index: 1;
   width: auto !important;
   height: 180px !important;
   display: flex !important;
   flex-direction: column !important;
   justify-content: center !important;
   align-items: center !important;
+  z-index: 3;
 }
 
 .header {
@@ -38,6 +38,10 @@
   font-weight: bold !important;
   font-size: 3em !important;
   color: white !important;
+}
+
+.layout-wrapper {
+  position: absolute;
 }
 
 .errorMsg{
@@ -55,7 +59,7 @@
   justify-content: center !important;
   align-content: center !important;
   align-items: center !important;
-  z-index: 1;
+  z-index: 3;
 }
 
 Form {
