--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -65,6 +65,7 @@
 .modal-actions-wrapper > button {
   width: 150px;
   box-shadow: 3px 3px grey !important;
+  margin: 10px 0 0 0 !important;
 }
 
 .signupform-wrapper {
